<resources>
    <string name="app_name">PracticeKt</string>
    <string name="second_activity">Second activity</string>
    <string name="click_here">Click here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="replace_fragment">Replace Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="finish_activity">Finish Activity</string>
    <string name="data_share">Data share</string>
    <string name="dial">Dial</string>
    <string name="dial_pad">Dial Pad</string>
    <string name="enter_number">Enter Number</string>


    <string name="select_language">Select Language</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="select_date">Select Date</string>
    <string name="e2logy_software_solutions">E2logy Software Solutions</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="animate_me">Animate Me!</string>
    <string name="viewpropertyanimator">ViewPropertyAnimator</string>
    <string name="circular_reveal">Circular Reveal</string>
    <string name="valueanimator">ValueAnimator</string>
    <string name="springanimation">SpringAnimation</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="play_audio">Play Audio</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="query_received_data">Query Received Data</string>
    <string name="type_two_caption">Type Two Caption</string>
    <string-array name="Languages">
        <item>Languages</item>
        <item>Kotlin</item>
        <item>Java</item>
        <item>Python</item>
        <item>Swift</item>
        <item>C++</item>
        <item>Html</item>
        <item>Flutter</item>
    </string-array>
</resources>