<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.sp.AnimationActivity">

    <TextView
        android:id="@+id/animatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/animate_me"
        android:textColor="#FF6200EE"
        android:textSize="24sp" />

    <Button
        android:id="@+id/propertyAnimateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/animatedTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/viewpropertyanimator" />

    <Button
        android:id="@+id/circularRevealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/propertyAnimateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/circular_reveal" />

    <Button
        android:id="@+id/valueAnimatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/circularRevealButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/valueanimator" />

    <Button
        android:id="@+id/springAnimatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/valueAnimatorButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/springanimation" />
</RelativeLayout>
