<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SecondActivity">

    <TextView
        android:id="@+id/txtSecName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_activity"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinishAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/finish_activity"
        app:layout_constraintEnd_toEndOf="@+id/txtSecName"
        app:layout_constraintStart_toStartOf="@+id/txtSecName"
        app:layout_constraintTop_toBottomOf="@+id/fcvFrag" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReplaceFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/replace_fragment"
        app:layout_constraintEnd_toEndOf="@+id/txtSecName"
        app:layout_constraintStart_toStartOf="@+id/txtSecName"
        app:layout_constraintTop_toBottomOf="@+id/btnFinishAc" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/redirectToDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dial_pad"
        app:layout_constraintEnd_toEndOf="@+id/txtSecName"
        app:layout_constraintStart_toStartOf="@+id/txtSecName"
        app:layout_constraintTop_toBottomOf="@+id/btnReplaceFragment" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fcvFrag"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>